# pico-w-projects

./: .gitignore  README.md
blink/: CMakeLists.txt  blink.c
pico-w-blink/: CMakeLists.txt
pico-w-server/: blink.py  hello.py  index.html  jsontest.py  ledonoff.py  main.py  simpleblink.py
pico-w-server/simple pico w on off/: main.py
pico-web/: Dockerfile  README.md  docker-compose-full.yml  docker-compose.yml
pico-web/board/: rp2-pico-w-20230201-unstable-v1.19.1-843-g6250337c9.uf2
pico-web/projects/: package-lock.json
pico-web/projects/pico_w/: main.py  mainA.py
pico-web/projects/pico_w/lib/: socketconfig.py  wificonfig.py
pico-web/projects/server/: app.js  config.js  nodemon.json  package-lock.json  package.json
pico-web/projects/server/public/css/: main.css
pico-web/projects/server/public/js/: main.js
pico-web/projects/server/views/: home.hbs
pico-web/projects/server/views/layouts/: main.hbs
wifi_connect/: CMakeLists.txt  wifi_connect.c
